[gd_scene load_steps=7 format=3 uid="uid://bo14oui3tg13g"]

[ext_resource type="Script" uid="uid://xbm0xj867ftm" path="res://escenas/escenas_nvl1/pause_menu.gd" id="1_k71up"]
[ext_resource type="Shader" uid="uid://dhm11818aagx1" path="res://escenas/escenas_nvl1/pause_menu.gdshader" id="2_1p1w5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0q5mm"]
shader = ExtResource("2_1p1w5")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_g1pdj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6e8fj"]
resource_name = "pausa"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.82]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ts2gp"]
_data = {
&"RESET": SubResource("Animation_g1pdj"),
&"pausa": SubResource("Animation_6e8fj")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k71up")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0q5mm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -134.0
offset_right = 116.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 27
alignment = 1

[node name="Resumen" type="Button" parent="PanelContainer/VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 16
text = "Reanudar"

[node name="Reiniciar" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Reiniciar"

[node name="Salir" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
text = "    Salir    "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ts2gp")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resumen" to="." method="_on_resumen_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
